localstack/kubernetes/consul.dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: dev
  labels:
    app: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      imagePullSecrets:
      containers:
      - name: consul
        image: amitkshirsagar13/consul:latest
        imagePullPolicy: Always
        args:
          - agent
          - -server
          - -bind
          - 0.0.0.0
          - -client
          - 0.0.0.0
          - -bootstrap-expect
          - "1"
          - -config-file=/consul/config/config.json
        ports:
          - containerPort: 8500
        volumeMounts:
          - mountPath: /consul/data
            name: consul-volume
      volumes:
        - name: consul-volume
          hostPath:
            path: /kubernetes/share/consul/data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consul
  name: consul
  namespace: dev
spec:
  ports:
    - port: 8500
      targetPort: 8500
  selector:
    app: consul
---
# http://consul.local.localtest.me/
# https://consul.local.localtest.me/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - consul.local.localtest.me
      secretName: dev-secret
  rules:
    - host: consul.local.localtest.me
      http:
        paths:
          - path: /
            backend:
              serviceName: consul
              servicePort: 8500
