localstack/kubernetes/core2io.dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core2io-service
  namespace: dev
  labels:
    app: core2io-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core2io-service
  template:
    metadata:
      labels:
        app: core2io-service
    spec:
      containers:
        - name: core2io-service
          image: amitkshirsagar13/core2io-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: core2io-service
  name: core2io-service
  namespace: dev
spec:
  ports:
    - name: http
      port: 8181
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: core2io-service
---
# http://core2io.local.localtest.me/core2io/api/test
# https://core2io.local.localtest.me/core2io/api/test
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: core2io-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - core2io.local.localtest.me
      secretName: dev-secret
  rules:
    - host: core2io.local.localtest.me
      http:
        paths:
          - path: /
            backend:
              serviceName: core2io-service
              servicePort: 8181
