localstack/kubernetes/echo.dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-service
  labels:
    appx-app: echo-service
  namespace: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      appx-app: echo-service
  template:
    metadata:
      labels:
        appx-app: echo-service
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: echo-service
          image: gcr.io/google_containers/echoserver:1.4
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: echo
  labels:
    appx-app: echo-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    appx-app: echo-service
---
# http://echo.local.k8cluster.io/
# https://echo.local.k8cluster.io/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: echo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - echo.local.k8cluster.io
      secretName: dev-secret
  rules:
    - host: echo.local.k8cluster.io
      http:
        paths:
          - path: /
            backend:
              serviceName: echo-service
              servicePort: 8080
