localstack/kubernetes/localstack.dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack-service
  namespace: dev
  labels:
    app: localstack-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack-service
  template:
    metadata:
      labels:
        app: localstack-service
    spec:
      containers:
        - name: localstack-service
          image: localstack/localstack:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4569
            - containerPort: 4572
            - containerPort: 4575
            - containerPort: 4576
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: localstack-service
  name: dynamodb-service
  namespace: dev
spec:
  ports:
    - name: dynamodb
      port: 4569
      targetPort: 4569
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: localstack-service
  name: s3-service
  namespace: dev
spec:
  ports:
    - name: s3
      port: 4572
      targetPort: 4572
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: localstack-service
  name: sns-service
  namespace: dev
spec:
  ports:
    - name: sns
      port: 4575
      targetPort: 4575
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: localstack-service
  name: sqs-service
  namespace: dev
spec:
  ports:
    - name: sqs
      port: 4576
      targetPort: 4576
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: localstack-service
  name: localstack-service
  namespace: dev
spec:
  ports:
    - name: dashboard
      port: 8080
      targetPort: 8080
  selector:
    app: localstack-service
---
# http://localstack.local.localtest.me/localstack/api/test
# https://localstack.local.localtest.me/localstack/api/test
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: localstack-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - dynamodb.local.localtest.me
        - s3.local.localtest.me
        - sns.local.localtest.me
        - sqs.local.localtest.me
        - dynamodb-service
        - s3-service
        - sns-service
        - sqs-service
        - dashboard.local.localtest.me
      secretName: dev-secret
  rules:
    - host: dynamodb-service
      http:
        paths:
          - path: /
            backend:
              serviceName: dynamodb-service
              servicePort: 4569
    - host: s3-service
      http:
        paths:
          - path: /
            backend:
              serviceName: s3-service
              servicePort: 4572
    - host: sns-service
      http:
        paths:
          - path: /
            backend:
              serviceName: sns-service
              servicePort: 4575
    - host: sqs-service
      http:
        paths:
          - path: /
            backend:
              serviceName: sqs-service
              servicePort: 4576
    - host: dashboard.local.localtest.me
      http:
        paths:
          - path: /
            backend:
              serviceName: localstack-service
              servicePort: 8080
