localstack/kubernetes/nginx.ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-http-backend
  namespace: ingress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: default-http-backend
          # Any image is permissable as long as:
          # 1. It serves a 404 page at /
          # 2. It serves 200 on a /healthz endpoint
          image: gcr.io/google_containers/defaultbackend:1.0
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 20Mi
---
kind: Service
apiVersion: v1
metadata:
  name: default-http-backend
  namespace: ingress
spec:
  selector:
    app: default-http-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    matchLabels:
      app: ingress
  template:
    metadata:
      labels:
        app: ingress
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      serviceAccountName: ingress
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: ingress
          image: nginx/nginx-ingress
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: https
              containerPort: 443
              hostPort: 443
          args:
            - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
            - -default-server-tls-secret=$(POD_NAMESPACE)/nginx-tls-secret
            - -wildcard-tls-secret=ingress/nginx-tls-secret
            # - -default-backend-service=ingress/default-http-backend
            # - -v=3 # Enables extensive logging. Useful for trooublshooting.
        - name: nginx-prometheus-exporter
          image: nginx/nginx-prometheus-exporter:0.2.0
          ports:
            - name: prometheus
              containerPort: 9113
          args:
            - -web.listen-address
            - :9113
            - -nginx.scrape-uri
            - http://127.0.0.1:8080/stub_status
---
kind: Service
apiVersion: v1
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    app: ingress
  ports:
    - name: prom
      protocol: TCP
      port: 9113
      targetPort: 9113
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress
spec:
  tls:
    - hosts:
        - nginx.metric.local.k8cluster.io
      secretName: nginx-tls-secret
  rules:
    - host: nginx.metric.local.k8cluster.io
      http:
        paths:
          - path: /
            backend:
              serviceName: ingress
              servicePort: 9113
