localstack/kubernetes/redis.dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-service
  namespace: dev
  labels:
    app: redis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-service
  template:
    metadata:
      labels:
        app: redis-service
    spec:
      imagePullSecrets:
      containers:
        - name: redis-service
          image: redis:4.0.2
          imagePullPolicy: Always
          command: ["bash", "-c",
                    "
                      docker-entrypoint.sh
                      --requirepass 'redis'
                    "]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /bitnami/redis/data
      volumes:
        - name: redis-storage
          hostPath:
            path: /kubernetes/share/bitnami/redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-service
  name: redis-service
  namespace: dev
spec:
  ports:
    - name: http
      port: 6379
      targetPort: 6379
  selector:
    app: redis-service
---
# http://redis.local.k8cluster.io/redis/api/test
# https://redis.local.k8cluster.io/redis/api/test
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - redis.local.k8cluster.io
      secretName: dev-secret
  rules:
    - host: redis.local.k8cluster.io
      http:
        paths:
          - path: /
            backend:
              serviceName: redis-service
              servicePort: 6379
