localstack/kubernetes/test-module.dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-module-service
  namespace: dev
  labels:
    app: test-module-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-module-service
  template:
    metadata:
      labels:
        app: test-module-service
    spec:
      containers:
        - name: test-module-service
          image: amitkshirsagar13/test-module:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-module-service
  name: test-module-service
  namespace: dev
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: test-module-service
---
# http://test-module.local.k8cluster.io/test-module/api/test
# https://test-module.local.k8cluster.io/test-module/api/test
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-module-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - test-module.local.k8cluster.io
      secretName: dev-secret
  rules:
    - host: test-module.local.k8cluster.io
      http:
        paths:
          - path: /
            backend:
              serviceName: test-module-service
              servicePort: 8080
