localstack/kubernetes/vault.dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-service
  namespace: dev
  labels:
    app: vault-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-service
  template:
    metadata:
      labels:
        app: vault-service
    spec:
      imagePullSecrets:
      containers:
        - name: vault-service
          image: vault:latest
          imagePullPolicy: Always
          command: ["vault", "server", "-config=/vault/config", "-dev-root-token-id=", "-dev-listen-address=0.0.0.0:8200", "--dev", "--dev-root-token-id=00000000-0000-0000-0000-000000000000"]
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          ports:
            - containerPort: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: dev
  labels:
      app: vault-service
spec:
  ports:
    - port: 8200
      targetPort: 8200
  selector:
    app: vault-service
---
# http://vault.local.k8cluster.io/
# https://vault.local.k8cluster.io/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - vault.local.k8cluster.io
      secretName: dev-secret
  rules:
    - host: vault.local.k8cluster.io
      http:
        paths:
          - path: /
            backend:
              serviceName: vault-service
              servicePort: 8200
